# ozky

./: .gitignore  README.md  compose.zk.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
circuits/channel_close/: Nargo.toml  Prover.toml
circuits/channel_close/src/: main.nr
circuits/deposit/: Nargo.toml  Prover.toml
circuits/deposit/src/: main.nr
circuits/deposit_demo/: Nargo.toml
circuits/deposit_demo/src/: main.nr
circuits/escrow_contribute/: Nargo.toml  Prover.toml
circuits/escrow_contribute/src/: main.nr
circuits/escrow_payout/: Nargo.toml  Prover.toml
circuits/escrow_payout/src/: main.nr
circuits/hello/: Nargo.toml
circuits/notes/: Nargo.toml
circuits/notes/src/: accumulator.nr  channel.nr  deposit.nr  escrow.nr  lib.nr  merkle.nr  split.nr  swap.nr  transfer.nr  transfer4.nr  withdraw.nr
circuits/shielded_swap/: Nargo.toml  Prover.toml
circuits/shielded_swap/src/: main.nr
circuits/split/: Nargo.toml  Prover.toml
circuits/split/src/: main.nr
circuits/transfer/: Nargo.toml  Prover.toml
circuits/transfer/src/: main.nr
circuits/transfer4/: Nargo.toml  Prover.toml
circuits/transfer4/src/: main.nr
circuits/transfer_demo/: Nargo.toml
circuits/transfer_demo/src/: main.nr
circuits/witgen/: Nargo.toml  Prover.toml
circuits/witgen/src/: main.nr
circuits/withdraw/: Nargo.toml  Prover.toml
circuits/withdraw/src/: main.nr
circuits/withdraw_demo/: Nargo.toml
circuits/withdraw_demo/src/: main.nr
contracts/: Cargo.toml
contracts/contracts/hello-world/src/: lib.rs  test.rs
contracts/contracts/policy/: Cargo.toml
contracts/contracts/policy/src/: lib.rs  merkle.rs
contracts/contracts/pool/: Cargo.toml
contracts/contracts/pool/src/: assets.rs  channel.rs  config.rs  domain.rs  escrow.rs  inputs.rs  lib.rs  nullifier.rs  poseidon.rs  reserve.rs  tree.rs  verifier.rs
contracts/contracts/rs-soroban-ultrahonk/: Cargo.toml
contracts/contracts/rs-soroban-ultrahonk/src/: lib.rs
contracts/contracts/rs-soroban-ultrahonk/tests/: integration_tests.rs
contracts/contracts/rs-soroban-ultrahonk/tests/fixtures/transfer/: proof  public_inputs
contracts/contracts/viewkeys/: Cargo.toml
contracts/contracts/viewkeys/src/: lib.rs
contracts/crates/test-utils/: Cargo.toml
contracts/crates/test-utils/src/: lib.rs
contracts/crates/ultrahonk-soroban-verifier/: Cargo.toml
contracts/crates/ultrahonk-soroban-verifier/src/: transcript.rs
contracts/frozen_vks/channel_close/: vk
contracts/frozen_vks/deposit/: vk
contracts/frozen_vks/escrow_contribute/: vk
contracts/frozen_vks/escrow_payout/: vk
contracts/frozen_vks/split/: vk
contracts/frozen_vks/transfer4/: vk
contracts/frozen_vks/withdraw/: vk
contracts/roundtrip/: Z7_RESULTS.md  a3_send_testnet.sh  e6_escrow_testnet.sh  epoch.env  proving_times.txt  run_testnet.sh  z7_integration.sh  z7_transcript.txt
contracts/roundtrip/deposit/: proof  public_inputs
contracts/roundtrip/transfer/: proof  public_inputs  vk
contracts/roundtrip/withdraw/: proof  public_inputs
contracts/rs-soroban-ultrahonk/tests/fixtures/shielded_swap/: proof  public_inputs  vk
funder-service/: .gcloudignore  Cargo.toml  Dockerfile  README.md  deploy_cloudrun.sh  deploy_gke.sh
funder-service/k8s/: deployment.yaml  service.yaml
funder-service/src/: chain.rs  main.rs
indexer/: Cargo.toml  Dockerfile  README.md  deploy_cloudrun.sh  offline_drill.sh  seed.json
indexer/src/: accumulator.rs  events.rs  main.rs  rpc.rs  state.rs  tree.rs
keeper-service/: .gcloudignore  Cargo.toml  Dockerfile  deploy_cloudrun.sh
keeper-service/src/: chain.rs  gcs.rs  main.rs
ozky/: components.json  package-lock.json  package.json
ozky/scripts/: dev-stack.mjs
ozky/src/: app.css  app.html
ozky/src-tauri/: .gitignore  Cargo.toml  dev-prover-bundle.mjs  stage-prover-bundle.mjs  tauri.conf.json  tauri.macos.conf.json
ozky/src-tauri/capabilities/: default.json
ozky/src-tauri/icons/: icon.icns
ozky/src-tauri/src/: commands.rs  lib.rs  main.rs
ozky/src-tauri/src/core/: accounts.rs  chain.rs  channel.rs  config.rs  connect.rs  deposit.rs  disclose.rs  encrypt.rs  enroll.rs  escrow.rs  funder.rs  history.rs  keeper.rs  keeper_task.rs  keychain.rs  keys.rs  mod.rs  notes.rs  payroll.rs  pedersen.rs  poseidon.rs  price.rs  proving.rs  scan.rs  send.rs  session.rs  sign.rs  subscriptions.rs  swap.rs  totp.rs  trustline.rs  vault.rs  withdraw.rs  witness.rs
ozky/src/lib/: api.ts  assets.ts  devlog.ts  format.ts  settings.svelte.ts  wallet.svelte.ts
ozky/src/lib/components/: login-form.svelte  otp-form.svelte  signup-form.svelte
ozky/src/routes/: +layout.svelte  +page.svelte
ozky/src/routes/auditor/: +page.svelte
ozky/src/routes/deposit/: +page.svelte
ozky/src/routes/login-04/: +page.svelte
ozky/src/routes/markets/: +page.svelte
ozky/src/routes/payroll/: +page.svelte
ozky/src/routes/send/: +page.svelte
ozky/src/routes/settings/: +page.svelte
ozky/src/routes/signup-04/: +page.svelte
ozky/src/routes/split/: +page.svelte
ozky/src/routes/subscriptions/: +page.svelte
ozky/src/routes/swap/: +page.svelte
ozky/src/routes/transactions/: +page.svelte
ozky/src/routes/wallet/: +page.svelte
ozky/src/routes/withdraw/: +page.svelte
ozky/ui_archive/: README.md
ozky/ui_archive/escrow/: +page.svelte
ozky/ui_archive/otp-04/: +page.svelte
ozky/ui_archive/receive/: +page.svelte
ozky/ui_archive/subscriptions/: +page.svelte
ozky/ui_archive/withdraw/: +page.svelte
prover-sidecar/: build.mjs  package-lock.json  package.json  prove.mjs
web/: .gitignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
web/src/: app.html
web/src/lib/: scroll.ts
web/src/lib/components/: Footer.svelte  Header.svelte  LegalBody.svelte  Loader.svelte  Logo.svelte  MenuOverlay.svelte  Texture.svelte
web/src/lib/content/: about.ts  docs.ts  downloads.ts  home.ts  legal.ts  pitch.ts  quickstart.ts  site.ts  technology.ts
web/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  layout.css
(+120 files in other folders)
