[workspace]
resolver = "2"
members = [
  "contracts/*",
  "crates/*",
]

[workspace.dependencies]
# default-features = false: the vendored ultrahonk-soroban-verifier is no_std + alloc;
# each crate re-enables only what it needs (alloc / testutils).
soroban-sdk = { version = "26", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://developers.stellar.org/docs/build/smart-contracts/example-contracts/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
