[package]
name = "ozky"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ozky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS keychain for wallet secrets (Windows Credential Manager / macOS Keychain /
# Linux secret service). Per-OS backend selected by feature; gated by target.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
# Key management (A1): BIP39 mnemonic, SLIP-0010 ed25519 (SEP-0005) Stellar key,
# distinct BN254 ZK spending key.
bip39 = { version = "2", features = ["rand"] }
ed25519-dalek = "2"
hmac = "0.12"
sha2 = "0.10"
stellar-strkey = "0.0.13"
num-bigint = "0.4"
zeroize = "1"
hex = "0.4"

