[package]
name = "ozky"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# Two binaries exist (ozky desktop app + ozky-keeper cloud service); without this
# `cargo run` / `tauri dev` can't pick one. The desktop app is the default.
default-run = "ozky"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ozky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS keychain for wallet secrets (Windows Credential Manager / macOS Keychain /
# Linux secret service). Per-OS backend selected by feature; gated by target.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
# Key management (A1): BIP39 mnemonic, SLIP-0010 ed25519 (SEP-0005) Stellar key,
# distinct BN254 ZK spending key.
bip39 = { version = "2", features = ["rand"] }
ed25519-dalek = "2"
hmac = "0.12"
sha2 = "0.10"
stellar-strkey = "0.0.13"
num-bigint = "0.4"
zeroize = "1"
hex = "0.4"
# A2 — note encryption: X25519 ECDH -> HKDF-SHA256 -> key-committing AEAD.
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
# Auth (local password lock + TOTP 2FA): Argon2id derives the vault key from the
# password; the seed is encrypted at rest (ChaCha20-Poly1305, above). RFC-6238 TOTP
# uses HMAC-SHA1 (authenticator-app default); base32 for the otpauth secret encoding.
argon2 = "0.5"
sha1 = "0.10"
base32 = "0.5"
# A2/A3 — chain client: Stellar RPC (getEvents/getLatestLedger) + ScVal XDR decode,
# so the wallet reconstructs any pool's commitments/nullifiers from raw chain data
# (the indexer is only an optional accelerator; raw RPC is the correctness path).
ureq = { version = "2", features = ["json"] }
# Minimal blocking HTTP server for the cloud keeper (`ozky-keeper --serve`, K7). The client side
# (push-on-arm + RPC) reuses ureq above; only the serve binary needs a server.
tiny_http = "0.12"
stellar-xdr = { version = "23", features = ["std", "base64", "curr"] }
# A2 — circuit-matching Poseidon2 (BN254). Reuse the EXACT host-function wrapper the
# contract/indexer use (proven parity) so witnesses are byte-for-byte acceptable to
# the verifier. Pulls soroban-sdk (heavy) — accepted: parity is the foundational risk.
soroban-sdk = { version = "26", features = ["testutils"] }
soroban-poseidon = "26.0.0"

