[package]
name = "pool"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
soroban-poseidon = "26.0.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
# Register the real vendored verifier in-VM to test the cross-contract verify call.
rs-soroban-ultrahonk = { path = "../rs-soroban-ultrahonk" }
# Register the real policy contract in-VM to test the deposit allow-list gate.
policy = { path = "../policy" }
