[package]
name = "rs-soroban-ultrahonk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "../../crates/ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
# Enable test helpers for local unit tests
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
soroban-env-host = "26.1.3"
ultrahonk-test-utils = { path = "../../crates/test-utils" }
