[package]
name = "ultrahonk_soroban_verifier"
version = "0.1.0"
edition = "2021"

license     = "MIT"
description = "Rust verifier for UltraHonk proofs"
repository  = "https://github.com/yugocabrio/rs-soroban-ultrahonk"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ultrahonk-test-utils = { path = "../test-utils" }

[features]
default = []
std = []
trace = []
